Complete countries API Controller

--- a/Devpshop.WEB/Pages/Countries/CountriesIndex.razor
+++ b/Devpshop.WEB/Pages/Countries/CountriesIndex.razor
@@ -3,13 +3,12 @@
 
 <h3>Paises</h3>
 
-@if(Countries is null)
-{
-	<p>Cargando</p>
-}
-else
-{
-	        <table class="table table-striped">
+<GenericList MyList="Countries">
+    <Loading>
+        <p>Cargando...</p>
+    </Loading>
+    <Body>
+	    <table class="table table-striped">
             <thead>
                 <tr>
                     <th></th>
@@ -17,7 +16,7 @@ else
                 </tr>
             </thead>
             <tbody>
-                @foreach (var country in Countries)
+                @foreach (var country in Countries!)
                 {
                     <tr>
                         <td>
@@ -31,8 +30,8 @@ else
                 }
             </tbody>
         </table>
-
-}
+    </Body>
+</GenericList>
 
 @code {
 
