Fix Create Country

--- a/Devpshop.WEB/Pages/Countries/CountriesIndex.razor
+++ b/Devpshop.WEB/Pages/Countries/CountriesIndex.razor
@@ -3,10 +3,12 @@
 
 <h3>Paises</h3>
 
+<div class="mb-3">
+    <a class="btn btn-primary" href="/countries/create">Nuevo País</a>
+</div>
+
+
 <GenericList MyList="Countries">
-    <Loading>
-        <p>Cargando...</p>
-    </Loading>
     <Body>
 	    <table class="table table-striped">
             <thead>
