--- a/Devpshop.WEB/_Imports.razor
+++ b/Devpshop.WEB/_Imports.razor
@@ -10,3 +10,4 @@
 @using Devpshop.WEB.Shared
 @using Devpshop.WEB.Repositories
 @using Devpshop.Shared.Entities
+@using CurrieTechnologies.Razor.SweetAlert2
