--- a/Devpshop.WEB/Pages/Countries/CountryCreate.razor
+++ b/Devpshop.WEB/Pages/Countries/CountryCreate.razor
@@ -21,12 +21,13 @@
             await sweetAlertService.FireAsync("Error", message);
             return;
         }
-        countryForm!.FormPostedSuccessfully = true; 
-        navigationManager.NavigateTo("countries");
+
+        Return();
     }
 
     private void Return()
     {
+        countryForm!.FormPostedSuccessfully = true;
         navigationManager.NavigateTo("/countries");
     }
 }
