--- a/Devpshop.WEB/Pages/Countries/CountryForm.razor
+++ b/Devpshop.WEB/Pages/Countries/CountryForm.razor
@@ -57,7 +57,7 @@
             {
                 Title = "Confirmación",
                 Text = "¿Deseas abandonar la página y perder los cambios?",
-                Icon = SweetAlertIcon.Warning,
+                Icon = SweetAlertIcon.Question,
                 ShowCancelButton = true,
                 CancelButtonText = "No",
                 ConfirmButtonText = "Si"
