--- a/Devpshop.WEB/Pages/States/StateDetails.razor
+++ b/Devpshop.WEB/Pages/States/StateDetails.razor
@@ -1,44 +1,40 @@
-﻿@page "/countries/details/{Id:int}"
+﻿@page "/states/details/{StateId:int}"
 @inject IRepository repository
 @inject NavigationManager navigationManager
 @inject SweetAlertService sweetAlertService
 
-@if(country is null)
+@if (state is null)
 {
 	<p>Cargando...</p>
-}else
+}
+else
 {
-	<h3>@country.Name</h3>
+	<h3>@state.Name</h3>
 	<div class="mb-2">
-	    <a class="btn btn-primary" href="/states/create/@country.Id">Nuevo Estado/Depto</a>
-		<a class="btn btn-success" href="/countries">Regresar</a>
+		<a class="btn btn-primary" href="/cities/create/@StateId">Nueva Ciudad</a>
+		<a class="btn btn-success" href="/countries/details/@state.CountryId">Regresar</a>
 	</div>
 
-	<GenericList MyList="country.States!.ToList()">
+	<GenericList MyList="state.Cities!.ToList()">
 		<Body>
 			<table class="table table-striped">
 				<thead>
 					<tr>
 
-						<th>Estado / Depto</th>
-						<th>Ciudades</th>
+						<th>Ciudad</th>
 						<th></th>
 					</tr>
 				</thead>
 				<tbody>
-					@foreach (var state in country.States!.ToList())
+					@foreach (var city in state.Cities!.ToList())
 					{
 						<tr>
 							<td>
-								@state.Name
+								@city.Name
 							</td>
 							<td>
-								@state.CitiesNumber
-							</td>
-							<td>
-								<a class="btn btn-info" href="/states/details/@state.Id">Detalles</a>
-								<a class="btn btn-warning" href="/states/edit/@state.Id">Editar</a>
-								<button class="btn btn-danger" @onclick=@(() => DeleteAsync(state.Id))>Borrar</button>
+								<a class="btn btn-warning" href="/cities/edit/@city.Id">Editar</a>
+								<button class="btn btn-danger" @onclick=@(() => DeleteAsync(city.Id))>Borrar</button>
 							</td>
 						</tr>
 					}
@@ -48,13 +44,12 @@
 	</GenericList>
 }
 
-
 @code {
-	private Country? country;
+	private State? state;
 
 
 	[Parameter]
-	public int Id { get; set; }
+	public int StateId { get; set; }
 
 	protected override async Task OnInitializedAsync()
 	{
@@ -63,7 +58,7 @@
 
 	private async Task LoadAsync()
 	{
-		var responseHttp = await repository.Get<Country>($"/api/countries/{Id}");
+		var responseHttp = await repository.Get<State>($"/api/states/{StateId}");
 		if (responseHttp.Error)
 		{
 			if (responseHttp.HttpResponseMessage.StatusCode == HttpStatusCode.NotFound)
@@ -77,12 +72,11 @@
 			return;
 		}
 
-		country = responseHttp.Response;
-		
+		state = responseHttp.Response;
 	}
 
 
-	private async Task DeleteAsync(int id)
+	private async Task DeleteAsync(int CityId)
 	{
 		var result = await sweetAlertService.FireAsync(new SweetAlertOptions
 			{
@@ -101,7 +95,7 @@
 			return;
 		}
 
-		var responseHttp = await repository.Delete($"/api/states/{id}");
+		var responseHttp = await repository.Delete($"/api/cities/{CityId}");
 		if (responseHttp.Error)
 		{
 			if (responseHttp.HttpResponseMessage.StatusCode != HttpStatusCode.NotFound)
@@ -115,5 +109,4 @@
 		await LoadAsync();
 
 	}
-
 }
