--- a/Devpshop.WEB/Pages/Cities/CityCreate.razor
+++ b/Devpshop.WEB/Pages/Cities/CityCreate.razor
@@ -1,24 +1,24 @@
-﻿@page "/states/create/{CountryId:int}"
+﻿@page "/cities/create/{StateId:int}"
 @inject NavigationManager navigationManager
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 
 <h3>Crear Estado/Depto</h3>
 
-<StateForm @ref="stateForm" State="state" OnValidSubmit="CreateAsync" ReturnAction="Return" />
+<CityForm @ref="cityForm" City="city" OnValidSubmit="CreateAsync" ReturnAction="Return" />
 
 @code {
-    private State state = new();
-    private StateForm? stateForm;
+    private City city = new();
+    private CityForm? cityForm;
 
     [Parameter]
-    public int CountryId { get; set; }
+    public int StateId { get; set; }
 
     private async Task CreateAsync()
     {
-        state.CountryId = CountryId;
+        city.StateId = StateId;
 
-        var httpResponse = await repository.Post("api/states", state);
+        var httpResponse = await repository.Post("api/cities", city);
 
         if (httpResponse.Error)
         {
@@ -32,7 +32,7 @@
 
     private void Return()
     {
-        stateForm!.FormPostedSuccessfully = true;
-        navigationManager.NavigateTo($"/countries/details/{CountryId}");
+        cityForm!.FormPostedSuccessfully = true;
+        navigationManager.NavigateTo($"/states/details/{StateId}");
     }
 }
