--- a/Devpshop.WEB/Pages/Countries/CountriesIndex.razor
+++ b/Devpshop.WEB/Pages/Countries/CountriesIndex.razor
@@ -9,6 +9,11 @@
 	<a class="btn btn-primary" href="/countries/create">Nuevo País</a>
 </div>
 
+<Pagination CurrentPage="currentPage"
+			TotalPages="totalPages"
+			SelectedPage="SelectedPageAsync" />
+
+
 
 <GenericList MyList="Countries">
 	<Body>
@@ -17,8 +22,8 @@
 				<tr>
 
 					<th>País</th>
-					<th>Estados / Departamentos</th>
-					<th></th>
+					<th style="width:220px">Estados / Departamentos</th>
+					<th style="width:260px"></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -46,17 +51,33 @@
 @code {
 
 	public List<Country>? Countries { get; set; }
+	private int currentPage = 1;
+	private int totalPages;
+
 
 	protected override async Task OnInitializedAsync()
 	{
 		await LoadAsync();
 	}
 
-	private async Task LoadAsync()
+	private async Task LoadAsync(int page = 1)
 	{
-		var responseHttp = await repository.Get<List<Country>>("/api/countries");
-		Countries = responseHttp.Response;
+		string url1 = $"api/countries?page={page}";
+		string url2 = $"api/countries/totalPages";
+
+		var responseHppt = await repository.Get<List<Country>>(url1);
+		var responseHppt2 = await repository.Get<int>(url2);
+		Countries = responseHppt.Response!;
+		totalPages = responseHppt2.Response!;
+
 	}
+
+	private async Task SelectedPageAsync(int page)
+	{
+		currentPage = page;
+		await LoadAsync(page);
+	}
+
 
 	private async Task DeleteAsync(int id)
 	{
