--- a/Devpshop.WEB/Pages/Countries/CountryDetails.razor
+++ b/Devpshop.WEB/Pages/Countries/CountryDetails.razor
@@ -14,19 +14,24 @@
 		<a class="btn btn-success" href="/countries">Regresar</a>
 	</div>
 
-	<GenericList MyList="country.States!.ToList()">
+	<Pagination CurrentPage="currentPage"
+			TotalPages="totalPages"
+			SelectedPage="SelectedPage" />
+
+
+	<GenericList MyList="states">
 		<Body>
 			<table class="table table-striped">
 				<thead>
 					<tr>
 
 						<th>Estado / Depto</th>
-						<th>Ciudades</th>
-						<th></th>
+						<th style="width:140px">Ciudades</th>
+						<th style="width:260px"></th>
 					</tr>
 				</thead>
 				<tbody>
-					@foreach (var state in country.States!.ToList())
+					@foreach (var state in states!)
 					{
 						<tr>
 							<td>
@@ -51,6 +56,10 @@
 
 @code {
 	private Country? country;
+	private List<State>? states;
+	private int currentPage = 1;
+	private int totalPages;
+
 
 
 	[Parameter]
@@ -61,23 +70,24 @@
 		await LoadAsync();
 	}
 
-	private async Task LoadAsync()
+	private async Task SelectedPage(int page)
 	{
-		var responseHttp = await repository.Get<Country>($"/api/countries/{Id}");
-		if (responseHttp.Error)
-		{
-			if (responseHttp.HttpResponseMessage.StatusCode == HttpStatusCode.NotFound)
-			{
-				navigationManager.NavigateTo("/countries");
-				return;
-			}
+		currentPage = page;
+		await LoadAsync(page);
+	}
 
-			var message = await responseHttp.GetErrorMessageAsync();
-			await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
-			return;
-		}
 
-		country = responseHttp.Response;
+	private async Task LoadAsync(int page = 1)
+	{
+		string url1 = $"api/states?id={Id}&page={page}";
+		string url2 = $"api/states/totalPages?id={Id}";
+		var responseHppt = await repository.Get<Country>($"api/countries/{Id}");
+		var responseHppt2 = await repository.Get<List<State>>(url1);
+		var responseHppt3 = await repository.Get<int>(url2);
+		country = responseHppt.Response;
+		states = responseHppt2.Response;
+		totalPages = responseHppt3.Response;
+
 		
 	}
 
