--- a/Devpshop.WEB/Pages/Countries/CountryDetails.razor
+++ b/Devpshop.WEB/Pages/Countries/CountryDetails.razor
@@ -9,10 +9,20 @@
 }else
 {
 	<h3>@country.Name</h3>
-	<div class="mb-2">
-	    <a class="btn btn-primary" href="/states/create/@country.Id">Nuevo Estado/Depto</a>
-		<a class="btn btn-success" href="/countries">Regresar</a>
-	</div>
+    <div class="mb-2" style="display: flex; flex-wrap:wrap; align-items: center;">
+        <div>
+            <a class="btn btn-primary" href="/states/create/@country.Id">Nuevo Estado/Departamento</a>
+            <a class="btn btn-success" href="/countries">Regresar</a>
+        </div>
+        <div class="mx-2">
+            <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Buscar estado/departamento..." @bind-value="Filter" />
+        </div>
+        <div>
+            <button type="button" class="btn btn-outline-primary" @onclick="ApplyFilterAsync">Filtrar</button>
+            <button type="button" class="btn btn-outline-danger" @onclick="CleanFilterAsync">Limpiar</button>
+        </div>
+    </div>
+
 
 	<Pagination CurrentPage="currentPage"
 			TotalPages="totalPages"
@@ -65,6 +75,15 @@
 	[Parameter]
 	public int Id { get; set; }
 
+	[Parameter]
+	[SupplyParameterFromQuery]
+	public string Page { get; set; } = "";
+
+	[Parameter]
+	[SupplyParameterFromQuery]
+	public string Filter { get; set; } = "";
+
+
 	protected override async Task OnInitializedAsync()
 	{
 		await LoadAsync();
@@ -79,8 +98,25 @@
 
 	private async Task LoadAsync(int page = 1)
 	{
-		string url1 = $"api/states?id={Id}&page={page}";
-		string url2 = $"api/states/totalPages?id={Id}";
+		if (!string.IsNullOrWhiteSpace(Page))
+		{
+			page = Convert.ToInt32(Page);
+		}
+
+		string url1 = string.Empty;
+		string url2 = string.Empty;
+
+		if (string.IsNullOrEmpty(Filter))
+		{
+			url1 = $"api/states?id={Id}&page={page}";
+			url2 = $"api/states/totalPages?id={Id}";
+		}
+		else
+		{
+			url1 = $"api/states?id={Id}&page={page}&filter={Filter}";
+			url2 = $"api/states/totalPages?id={Id}&filter={Filter}";
+		}
+
 		var responseHppt = await repository.Get<Country>($"api/countries/{Id}");
 		var responseHppt2 = await repository.Get<List<State>>(url1);
 		var responseHppt3 = await repository.Get<int>(url2);
@@ -125,5 +161,19 @@
 		await LoadAsync();
 
 	}
+
+	private async Task CleanFilterAsync()
+	{
+		Filter = string.Empty;
+		await ApplyFilterAsync();
+	}
+
+	private async Task ApplyFilterAsync()
+	{
+		int page = 1;
+		await LoadAsync(page);
+		await SelectedPage(page);
+	}
+
 
 }
