--- a/Devpshop.WEB/_Imports.razor
+++ b/Devpshop.WEB/_Imports.razor
@@ -12,3 +12,4 @@
 @using Devpshop.Shared.Entities
 @using CurrieTechnologies.Razor.SweetAlert2
 @using System.Net
+@using Microsoft.AspNetCore.Components.Authorization
